Fixed colour contrast on mobile for accessibility

--- a/CSS/problem.css
+++ b/CSS/problem.css
@@ -219,7 +219,7 @@
     #nav-list a {
       padding-block: 0.5rem;
       padding-inline: 0.5rem;
-      background-color: lightslategray;
+      background-color: darkslategray;
       border: solid 1px black;
       border-radius: 1rem;
     }
@@ -227,7 +227,7 @@
     #current a {
       background-color: black;
       border-radius: 1rem;
-      border: solid 1px lightslategray;
+      border: solid 1px darkslategray;
     }
 
     nav a {
