--- a/CSS/volunteer.css
+++ b/CSS/volunteer.css
@@ -143,7 +143,7 @@ footer {
   #nav-list a {
     padding-block: 0.5rem;
     padding-inline: 0.5rem;
-    background-color: lightslategray;
+    background-color: darkslategray;
     border: solid 1px black;
     border-radius: 1rem;
   }
@@ -151,7 +151,7 @@ footer {
   #current a {
     background-color: black;
     border-radius: 1rem;
-    border: solid 1px lightslategray;
+    border: solid 1px darkslategray;
   }
 
   nav a {
